コントローラーをクラス化

--- a/answer/other.html
+++ b/answer/other.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 <p>誰？</p>
-<p>{{ otherbar }}</p>
-<p>{{otherbar}}</p>
+<p>{{ othervar }}</p>
+<p>{{othervar}}</p>
 <p>{{ yyy }}</p>
-<p>{{ yyy otherbar xxx}}</p>
-<p>{{ otherbar otherbarx xxx otherbar }}</p>
+<p>{{ yyy othervar xxx}}</p>
+<p>{{ othervar othervarx xxx othervar }}</p>
 
 </body>
 </html>
