バリデーション仮作成

--- a/answer/hasumin.html
+++ b/answer/hasumin.html
@@ -8,7 +8,17 @@
 </head>
 <body>
 <p>Androidラヴ</p>
-<p>{{ hasvar }}</p>
+
+<form action="" method="post">
+<div>
+    <label for="id">id:</label>
+    <input type="text" id="id" name="id"/>
+</div>
+<textarea name="hasvar" rows="4" cols="40"></textarea>
+<input type="submit" value="送信"><input type="reset" value="リセット">
+</form>
+<p>id:{{ id }}</p>
+<p>name:{{ hasvar }}</p>
 <p>{{ hasvar hasvar hasvar }}</p>
 </body>
 </html>
