--- a/answer/hasumin.html
+++ b/answer/hasumin.html
@@ -10,15 +10,9 @@
 <p>Androidラヴ</p>
 
 <form action="" method="post">
-<div>
-    <label for="id">id:</label>
-    <input type="text" id="id" name="id"/>
-</div>
-<textarea name="hasvar" rows="4" cols="40"></textarea>
+<input type="text" name="hasvar"/>
 <input type="submit" value="送信"><input type="reset" value="リセット">
 </form>
-<p>id:{{ id }}</p>
 <p>name:{{ hasvar }}</p>
-<p>{{ hasvar hasvar hasvar }}</p>
 </body>
 </html>
